# locust-coding-challenge

./: .env  .gitignore  Dockerfile  README.md  cpu_monitor.py  pyproject.toml  run.sh
app/: config.py  db.py  deps.py  main.py  models.py  routes.py
cpu_monitor/: cpu_monitor.py  pyproject.toml
